add google verification meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
+  <meta name="google-site-verification" content="0AP-Goo7RGM1VaaTRSnXbUB0do2bHWRQihuLC962Olk" />
 </head>
 
 <body>
